variables2/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-wakaise/rustlings-wakaise/format_check)
error[E0283]: type annotations needed
  --> src/lib.rs:9:9
   |
9  |     let x;
   |         ^
10 |     if x == 10 {
   |          -- type must be known at this point
   |
   = note: cannot satisfy `_: std::cmp::PartialEq<i32>`
help: consider giving `x` an explicit type
   |
9  |     let x: /* Type */;
   |          ++++++++++++

For more information about this error, try `rustc --explain E0283`.
error: could not compile `format_check` (lib) due to 1 previous error

[!] Source code format check: FAILED
